--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -68,7 +68,8 @@
         [%scripts%]
         <script type="text/javascript">
         //<![CDATA[
-
+            var smithIo = [%smithIo%];
+            smithIo.port = location.port;
             window.cloud9config = {
                 startdate: new Date(),
                 davPrefix: <%davPrefix%>,
@@ -85,7 +86,7 @@
                 version: <%version%>,
                 workerUrl: "[%workerUrl%]",
                 staticUrl: "[%staticUrl%]",
-                smithIo: <%smithIo%>,
+                smithIo: JSON.stringify(smithIo),
                 hosted: [%hosted%],
                 local: <%local%>,
                 env: <%env%>,
